--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "mongoose-examples",
   "version": "1.0.0",
   "description": "mongoose examples",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "populate": "nodemon --exec babel-node ./populate_example/app.js"
+    "populate": "nodemon --exec babel-node ./populate_example/app.js",
+    "findbydate": "nodemon --exec babel-node ./src/index.js"
   },
   "keywords": [
     "mongoose"
